z-index fix

--- a/src/components/header/header.module.scss
+++ b/src/components/header/header.module.scss
@@ -21,9 +21,10 @@
     display: grid;
     grid-template-rows: auto 1fr;
     align-items: stretch;
-    z-index: 2;
+    z-index: -1;
     &.open {
       opacity: 1;
+      z-index: 2;
       pointer-events: all;
     }
     .search {
